// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPicker should render correctly 1`] = `
<ListPickerBase
  items={Array []}
  setEnabled={[Function]}
  title="Test"
/>
`;

exports[`ListPickerBase should render correctly 1`] = `
<ExpandableItem
  items={Array []}
  setEnabled={[Function]}
  title="Test"
>
  <Icon
    icon={
      <i
        className="icon icon-list"
      />
    }
    onClick={[Function]}
    title="Test"
  />
</ExpandableItem>
`;

exports[`ListPickerItem should render correctly 1`] = `
<div
  className="ListPicker-item"
>
  <div
    className="label"
  />
</div>
`;
